--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 
 <h2>This is me practicing how to do things</h2>
     <h1>  kjljd;alfjslajml;jflksjfsdfsfslkjdslkj fljslkfjs lak  </h1>
+
+
+
+
+
+
+
+
+
+
+    <address>hsjlafkjd;</address>
+    <article>article</article>
     
 </body>
 </html>
